# ghcjs-stack

./: .gitignore  LICENSE  README.md  align-ghcjs-with-stack.sh  boot-ng.cabal  boot.yaml  fetch-packages.sh  ghcjs-base.cabal1  ghcjs.cabal1  lib.sh  stack.yaml
patches/: base-4.8.0.0.patch  ghc-prim-0.4.0.0.patch  integer-gmp-0.5.1.0.patch
special/: err
special/Win32/Graphics/Win32/: Control.hsc  Dialogue.hsc  Icon.hs  Key.hsc  Menu.hsc  Message.hsc  Misc.hsc  Resource.hsc  Window.hsc
special/Win32/Graphics/Win32/GDI/: Bitmap.hsc  Brush.hsc  Clip.hsc  Font.hsc  Graphics2D.hs  HDC.hs  Palette.hsc  Path.hs  Pen.hsc  Region.hs  Types.hsc
special/Win32/System/Win32/: Console.hsc  DLL.hsc  DebugApi.hsc  File.hsc  FileMapping.hsc  Info.hsc  Mem.hsc  NLS.hsc  Process.hsc  Registry.hsc  Security.hsc  Shell.hsc  SimpleMAPI.hsc  Time.hsc  Types.hs
special/Win32/tests/: all.T  registry001.hs
special/integer-gmp/: configure  integer-gmp.cabal
special/integer-gmp-next/: configure  integer-gmp.cabal
special/integer-gmp-next/jsbits/: ghcjsbn.js
special/integer-gmp-next/src/GHC/Integer/: Logarithms.hs  Type.hs
special/integer-gmp-next/src/GHC/Integer/GMP/: Internals.hs
special/integer-gmp-next/src/GHC/Integer/Logarithms/: Internals.hs
special/integer-gmp/GHC/Integer/: Type.lhs
special/integer-gmp/GHC/Integer/GMP/: Internals.hs  Prim.hs
special/integer-gmp/GHC/Integer/Logarithms/: Internals.hs
special/integer-gmp/autom4te.cache/: output.0  requests  traces.0
