name:                boot-ng
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/tolysz/boot-ng#readme
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
copyright:           2015(c) Marcin Tolysz
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable boot-ng
--  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:              array
                             , base
                             , binary
                             , bytestring
                             , containers
                             , deepseq
                             , pretty
                             , primitive
                             , integer-gmp == 0.5.1.0
                             , pretty
                             , primitive
                             , template-haskell
                             , transformers
                             -- stage1b
                             , directory
                             , filepath
                             , old-locale
                             , process
                             , time
                             -- stage2
                             , async
                             , aeson
                             , tagged
                             , nats
                             , fail
                             , attoparsec
                             , case-insensitive
                             , dlist
                             , extensible-exceptions
                             , hashable
                             , mtl
                             , old-time
                             , parallel
                             , scientific
                             , stm
                             , syb
                             , text
                             , unordered-containers
                             , vector
                             -- my
                             , possible
                             , semigroups
